--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -54,7 +54,7 @@
   }
   
   &__text {
-    color: $text-color;
+    color: var(--text-color);
     font-size: $font-size-medium;
     line-height: 1.5;
     word-break: break-word;
@@ -76,7 +76,7 @@
   
   &__time {
     font-size: 11px;
-    color: $light-text-color;
+    color: var(--light-text-color);
     margin-right: $spacing-xs;
   }
   
@@ -84,14 +84,14 @@
     display: flex;
     align-items: center;
     font-size: 14px;
-    color: $light-text-color;
+    color: var(--light-text-color);
     
     &-read {
-      color: $primary-color;
+      color: var(--primary-color);
     }
     
     &-sent {
-      color: $light-text-color;
+      color: var(--light-text-color);
     }
   }
   
@@ -101,17 +101,17 @@
     justify-content: flex-end;
     
     .message__content {
-      background: linear-gradient(135deg, $primary-color, $primary-light);
+      background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
       background-size: 200% 200%;
       color: white;
       border-radius: $border-radius-lg $border-radius-lg 0 $border-radius-lg;
-      box-shadow: 0 3px 10px rgba($primary-color, 0.2);
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
       @include animate(colorPulse, 5s, 0s, infinite, alternate);
       
       &::before {
         left: auto;
         right: -8px;
-        background: linear-gradient(135deg, $primary-color, $primary-light);
+        background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
         background-size: 200% 200%;
         clip-path: polygon(0 100%, 0 0, 100% 0);
         border-bottom-left-radius: 0;
@@ -123,7 +123,7 @@
       }
       
       &:hover {
-        box-shadow: 0 5px 15px rgba($primary-color, 0.3);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
       }
     }
     
