--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -127,11 +127,11 @@
   }
   
   &::-webkit-scrollbar-thumb {
-    background-color: lighten($light-text-color, 20%);
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 3px;
   }
   
   &::-webkit-scrollbar-thumb:hover {
-    background-color: $light-text-color;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
